--- a/src/_layouts/layout.slim
+++ b/src/_layouts/layout.slim
@@ -31,4 +31,4 @@ html.no-js(lang='en' xml:lang='en' xmlns='http://www.w3.org/1999/xhtml')
     script(src="#{url_for('/js/share.js')}")
     script(src="#{url_for('/js/index.js')}")
     / = inline_tag 'script', '/js/index.js'
-    script(src='/browser-sync/browser-sync-client.js')
+    / script(src='/browser-sync/browser-sync-client.js')
